# fastsno

./: .gitignore  README.md  download_audit.sh  enable_bootstrap_audit.sh  graph.sh  index.html  record_duration.sh  redord_duration.sh
critrack/: component.sh  dump.sh  example.sh  known.sh  pulls.sh
jq/: clusteroperators.jq  resources.jq
manifests/: 0000_00_openshift-apiserver-namespace.yaml  0000_00_openshift-config-managed-namespace.yaml  0000_00_openshift-config-namespace.yaml  0000_00_openshift-console-namespace.yaml  0000_00_openshift-console-operator-namespace.yaml  0000_00_openshift-controller-manager-namespace.yaml  0000_00_openshift-ingress-canary-namespace.yaml  0000_00_openshift-ingress-namespace.yaml  0000_00_openshift-machine-api-namespace.yaml  0000_00_openshift-network-diagnostics-namespace.yaml  0000_00_openshift-oauth-apiserver-namespace.yaml  0000_00_openshift-route-controller-manager-namespace.yaml  0000_00_service-ca-namespace.yaml
repoify/: Cargo.toml
repoify/src/: main.rs
