[package]
name = "repoify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
concat-reader = "0.1.0"
git2 = "0.16.1"
glob = "0.3.1"
indicatif = "0.17.3"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
